--- a/Swimmer_seller/app/src/main/res/layout/fragment_login.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_login.xml
@@ -8,6 +8,36 @@
     android:padding="16dp"
     tools:context=".ui.user.LoginFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_marginTop="50dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView27"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="7"
+            android:fontFamily="@font/hsbombaram"
+            android:text="SWIMMER"
+            android:textAlignment="viewEnd"
+            android:textColor="@color/seed"
+            android:textSize="34sp" />
+
+        <TextView
+            android:id="@+id/textView29"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:fontFamily="@font/hsbombaram"
+            android:text=" Seller"
+            android:textAlignment="viewStart"
+            android:textColor="@color/black"
+            android:textSize="34sp" />
+    </LinearLayout>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayoutLoginEmail"
         android:layout_width="match_parent"
