fix : 상품 후기 리뷰 목록 기반 평점 계산, 카운팅 반영

--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_review_tab_bottom_sheet_weight.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_review_tab_bottom_sheet_weight.xml
@@ -12,7 +12,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="무게"
+        android:text="체중"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
