--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_review_tab.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_review_tab.xml
@@ -109,7 +109,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:clickable="false"
-                    android:progress="100"
+                    android:max="100"
+                    android:progress="50"
                     android:thumb="@null" />
 
                 <TextView
@@ -141,7 +142,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:clickable="false"
-                    android:progress="100"
+                    android:max="100"
+                    android:progress="50"
                     android:thumb="@null" />
 
                 <TextView
@@ -173,7 +175,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:clickable="false"
-                    android:progress="100"
+                    android:max="100"
+                    android:progress="50"
                     android:thumb="@null" />
 
                 <TextView
@@ -205,7 +208,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:clickable="false"
-                    android:progress="100"
+                    android:max="100"
+                    android:progress="50"
                     android:thumb="@null" />
 
                 <TextView
@@ -237,7 +241,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:clickable="false"
-                    android:progress="100"
+                    android:max="100"
+                    android:progress="50"
                     android:thumb="@null" />
 
                 <TextView
@@ -261,7 +266,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:padding="3dp">
 
         <com.google.android.material.chip.ChipGroup
             android:layout_width="match_parent"
@@ -273,7 +278,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layoutDirection="rtl"
-                android:text="별점"
+                android:text="평점"
                 app:chipIcon="@drawable/expand_more_20px"
                 app:chipIconEnabled="true" />
 
