--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_review_tab_item.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_review_tab_item.xml
@@ -3,6 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginStart="2dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginEnd="2dp"
+    android:layout_marginBottom="5dp"
     android:orientation="vertical"
     android:padding="10dp">
 
