--- a/Swimmer_customer/app/src/main/res/layout/fragment_delivery_point_manage.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_delivery_point_manage.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".ui.deliverypointmanage.DeliveryPointManageFragment" >
+    tools:context=".ui.deliverypointmanage.DeliveryPointManageFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbarDeliveryPointManage"
@@ -13,6 +14,10 @@
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/Toolbar_Swimmer_Customer" />
+    <com.google.android.material.divider.MaterialDivider
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:dividerColor="@color/black"/>
 
     <Button
         android:id="@+id/buttonFindAddress"
