--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_add.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_add.xml
@@ -27,7 +27,7 @@
         app:titleTextColor="@color/white" />
 
     <ScrollView
-        android:id="@+id/scrollView"
+        android:id="@+id/scroll_view_product_add"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
